Moving tagline to separate include.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,14 +7,7 @@
 
       <!-- super fancy subtitle -->
       <p class="subtitle">
-        Using
-        <!-- animated text -->
-        <span class="has-text-weight-bold" id="animation"><span>a</span><span>n</span><span>i</span><span>m</span><span>a</span><span>t</span><span>i</span><span>o</span><span>n</span></span>
-        to alleviate overdraw in a
-        <!-- multicolored text -->
-        <span class="has-text-weight-bold" id="multiclass"><span>m</span><span>u</span><span>l</span><span>t</span><span>i</span><span>c</span><span>l</span><span>a</span><span>s</span><span>s</span></span>
-        <!-- underlined text //-->
-        <u class="has-text-weight-bold">s</u>catter<u class="has-text-weight-bold">plo</u>t <u class="has-text-weight-bold">m</u>atrix (<span class="has-text-weight-bold">SPLOM</span>).
+        Using <span class="is-lowercase">{% include tagline.html %}</span>(<span class="has-text-weight-bold">SPLOM</span>s).
       </p>
 
       <!-- github links -->
