No longer using min files.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,9 +5,9 @@
 
   <title>Animated SPLOMs</title>
 
-  <link rel="stylesheet" href="css/font-awesome.min.css">
-  <link rel="stylesheet" href="css/bulma.min.css">
-  <link rel="stylesheet" href="css/animate.min.css">
+  <link rel="stylesheet" href="css/font-awesome.css">
+  <link rel="stylesheet" href="css/bulma.css">
+  <link rel="stylesheet" href="css/animate.css">
 
   <link rel="stylesheet" href="css/anisplom.css">
 </head>
