Moving to relative links (easier to run website locally).

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,7 +1,7 @@
 <div class="tabs is-centered is-boxed">
   <ul>{% for nav in site.data.navbar %}
     <li{% if page.title == nav.name %} class="is-active"{% endif %}>
-      <a href="{{ nav.file | absolute_url }}">
+      <a href="{{ nav.file }}">
         {% if nav.icon %}<i class="fa {{ nav.icon }}"></i>&nbsp;{% endif %}
         {{ nav.name }}
       </a>
