Updating with presentation schedule.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,12 @@
 <section class="section">
 <div class="container">
 
+<!-- announcements -->
+
+<div class="notification is-primary">
+  <i class="fa fa-info-circle"></i> Attending <a href="https://chi2018.acm.org/">CHI 2018</a>? We will be presenting this work on <a href="https://fbr.me/chi18-schedule/thursday.html">Thursday April 26th</a> at 11:00am in the <q>Perception in Visualization 2</q> session in room 519AB in Montr&eacute;al.
+</div>
+
 <!-- navigation -->
 {% include navbar.html %}
 
