Changing linked text.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
 <!-- announcements -->
 
 <div class="notification is-primary">
-  <i class="fa fa-info-circle"></i> Attending <a href="https://chi2018.acm.org/">CHI 2018</a>? We will be presenting this work on <a href="https://chi2018.acm.org/technical-program/?timeslotId=-L6V0ystiKID-DUTHza7&sessionId=-L6UzzfZFcRqSMeZpna0">Thursday April 26th</a> at 11:00am in the <q>Perception in Visualization 2</q> session in room 519AB in Montr&eacute;al.
+  <i class="fa fa-info-circle"></i> Attending <a href="https://chi2018.acm.org/">CHI 2018</a>? We will be presenting this work on <strong>Thursday April 26th</strong> at 11:00am in the <q><a href="https://chi2018.acm.org/technical-program/?timeslotId=-L6V0ystiKID-DUTHza7&sessionId=-L6UzzfZFcRqSMeZpna0">Perception in Visualization 2</a></q> session in room 519AB in Montr&eacute;al.
 </div>
 
 <!-- navigation -->
